[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pipe.gd" type="Script" id=1]
[ext_resource path="res://black square.png" type="Texture" id=3]
[ext_resource path="res://pipe.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 56 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[node name="Pipe" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
texture = ExtResource( 4 )
polygon = PoolVector2Array( -24, -40, 24, -40, 24, 40, -24, 40 )
uv = PoolVector2Array( 1.90735e-06, 0, 60, 0, 60, 60, 1.90735e-06, 60 )

[node name="PointB" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_layer = 17
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointB"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PointB"]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.32, 1.92 )
texture = ExtResource( 3 )

[node name="B1" type="Position2D" parent="PointB"]
position = Vector2( 0, -40 )

[node name="B2" type="Position2D" parent="PointB"]
position = Vector2( 0, 40 )

[node name="PointA" type="Area2D" parent="."]
position = Vector2( -24, 0 )
collision_layer = 17
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointA"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="PointA"]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.32, 1.92 )
texture = ExtResource( 3 )

[node name="A1" type="Position2D" parent="PointA"]
position = Vector2( 0, -40 )

[node name="A2" type="Position2D" parent="PointA"]
position = Vector2( 0, 40 )

[connection signal="body_entered" from="PointB" to="." method="_on_PointB_body_entered"]
[connection signal="body_exited" from="PointB" to="." method="_on_PointB_body_exited"]
[connection signal="input_event" from="PointB" to="." method="_on_PointB_input_event"]
[connection signal="input_event" from="PointA" to="." method="_on_PointA_input_event"]
